# sems-external-libs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sems_external_libs.cmake
.github/workflows/: build.yml  release.yml
cmake/: botan_bundled.cmake  confuse_bundled.cmake  curl_bundled.cmake  s3_bundled.cmake  spandsp_bundled.cmake  srtp_bundled.cmake  stun_bundled.cmake
debian/: changelog  control  rules
third/: botan.patch  spandsp.patch
third/stun/stuncore/: stunbuilder.cpp  stunreader.cpp
